--- a/src/componentes/Services/services.css
+++ b/src/componentes/Services/services.css
@@ -8,7 +8,6 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    margin-top: 92px;
 }
 
 .service {
@@ -78,9 +77,9 @@
     margin: 0;
 }
 
-.service:last-child {
+/* .service:last-child {
     margin-bottom: 161px;
-}
+} */
 
 
 /* responsivo medias */
@@ -145,13 +144,6 @@
         width: 50%;
     }
 
-    .container-services {
-        margin-top: 4.375rem;
-    }
-
-    .service:last-child {
-        margin-bottom: 4.375rem;
-    }
 }
 
 @media(max-width: 390px) {
