detalhes nossos cases

--- a/src/pages/Home/componentesHome/ScrollCases/scrollcases.css
+++ b/src/pages/Home/componentesHome/ScrollCases/scrollcases.css
@@ -199,7 +199,8 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    margin-top: 6rem;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
 }
 
 
@@ -296,10 +297,18 @@
         font-size: 0.875rem;
     }
     .all-casest{
-        margin-top: 5rem;
+        margin-top: 4rem;
+        margin-bottom: 3rem;
     }
     .all-cases{
-        margin-bottom: 4.375rem;
+        margin-bottom: 3rem;
     }
 
 } 
+
+@media(max-width: 390px){
+    .all-casest{
+        margin-top: 4rem;
+        margin-bottom: 3rem;
+    }
+}
