--- a/src/pages/Home/componentesHome/ScrollCases/scrollcases.css
+++ b/src/pages/Home/componentesHome/ScrollCases/scrollcases.css
@@ -9,6 +9,7 @@
     clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
     display: flex;
     flex-direction: column;
+    margin-top: 0px;
 }
 .cases-scroll h1 {
     font-size: 96px;
