desenvolvendo animaçao do componente de nosso universo

--- a/src/componentes/Ideias/ideias.css
+++ b/src/componentes/Ideias/ideias.css
@@ -2,7 +2,7 @@
 .container_ideias{
     color: var(--color-white);
     /* padding-top: 14.5rem; */
-    padding-bottom: 200px;
+    /* padding-bottom: 200px; */
 }
 
 .black-ideias{
