--- a/src/pages/Home/componentesHome/BottomHome/bottomhome.css
+++ b/src/pages/Home/componentesHome/BottomHome/bottomhome.css
@@ -2,7 +2,7 @@
 .container_bottom{
     background-color: var(--color-black);
     color: var(--color-white);
-    padding-top: 12.5rem;
+    padding-top: 66px;
 }
 
 /* hero */
@@ -15,6 +15,14 @@
 /* parte esqueda hero */
 .left_bottom{
     width: 50%;
+}
+.left_bottom .revelatio, .reve-mobile p{
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 130%;
+    color: var(--color-gray-500);
+    font-family: "neue-haas-grotesk-display";
+    white-space: nowrap;
 }
 .hero_bottom span{
     color: var(--color-gray-800);
@@ -67,26 +75,29 @@
     margin-left: 12.8125rem;
 }
 
-.revelatio{
-    padding-top: 11.1875rem;
-    font-weight: 500;
-    font-size: 14px;
-    color: var(--color-gray-500);
-    position: absolute;
-}
-
 /* imagem rodapé */
 
 .final{
     width: 100%;
-    border-top: 1px var(--color-gray-200) solid;
-    padding-top: 2rem;
-    margin-top: 5.5rem;
+    max-width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 7.25rem;
+    padding-bottom: 2.875rem;
 }
+.reve-mobile{
+    display: none;
+}
+
 
 @media(max-width: 1280px) {}
 
-@media(max-width: 1200px) {}
+@media(max-width: 1280px) {
+    .final{
+        padding-bottom: 30px;
+    }
+}
 
 @media(max-width: 991px) {
     .right_bottom{
@@ -115,13 +126,39 @@
     }
     .links p{
         font-size: 20px;
-        margin-bottom: 0;
+        margin-bottom: 10px;
     }
     .container_links {
-        padding-left: 1rem;
+        padding-left: 0;
     }
     .social {
         margin-left: 1rem;
+    }
+    .hero_bottom{
+        flex-direction: column;
+    }
+    .revelatio{
+        display: none;
+    }
+    .adress{
+        white-space: nowrap;
+    }
+    .right_bottom{
+        gap: 60px;
+    }
+    .left_bottom{
+        width: 100%;
+    }
+    .adress{
+        padding-bottom: 70px;
+        padding-top: 2rem;
+    }
+    .reve-mobile{
+        margin-top: 57px;
+        display: flex;
+    }
+    .final{
+        margin-top: 69px;
     }
 
 }
