--- a/src/pages/Home/componentesHome/NossoUniverso/nossouniverso.css
+++ b/src/pages/Home/componentesHome/NossoUniverso/nossouniverso.css
@@ -7,6 +7,8 @@
     align-items: center;
     white-space: nowrap;
     overflow: hidden;
+    -webkit-font-smoothing: antialiased;
+    
 }
 
 
@@ -17,6 +19,8 @@
     font-family: "neue-haas-grotesk-display";
     color: var(--color-black);
     text-align: center;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
 }
 
 /* responsivo medias */
