--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,8 @@ html,
 body {
   overflow-x: hidden;
   overscroll-behavior: none;
-  -webkit-overflow-scrolling: auto;
+  /* -webkit-overflow-scrolling: auto; */
+  -webkit-overflow-scrolling: touch;
 }
 
 
