--- a/src/pages/Home/componentesHome/NossoUniverso/nossouniverso.css
+++ b/src/pages/Home/componentesHome/NossoUniverso/nossouniverso.css
@@ -8,6 +8,9 @@
     white-space: nowrap;
     overflow: hidden;
     -webkit-font-smoothing: antialiased;
+    -webkit-transform-style: preserve-3d;
+    backface-visibility: hidden;
+    transform: translate3d(0, 0, 0);
     
 }
 
