padding no nosso ambiente videos

--- a/src/componentes/ambiente/ambiente.css
+++ b/src/componentes/ambiente/ambiente.css
@@ -99,7 +99,7 @@
     }
 
     .container_ambiente .grid-global {
-        padding: 0px;
+        padding: 0px 15px;
     }
     .head{
         margin-bottom: 0;
