--- a/src/pages/Home/componentesHome/NossoUniverso/nossouniverso.css
+++ b/src/pages/Home/componentesHome/NossoUniverso/nossouniverso.css
@@ -7,10 +7,6 @@
     align-items: center;
     white-space: nowrap;
     overflow: hidden;
-    -webkit-font-smoothing: antialiased;
-    -webkit-transform-style: preserve-3d;
-    backface-visibility: hidden;
-    transform: translate3d(0, 0, 0);
     
 }
 
@@ -22,8 +18,8 @@
     font-family: "neue-haas-grotesk-display";
     color: var(--color-black);
     text-align: center;
-    text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 /* responsivo medias */
