--- a/src/pages/Home/componentesHome/NossoUniverso/nossouniverso.css
+++ b/src/pages/Home/componentesHome/NossoUniverso/nossouniverso.css
@@ -13,7 +13,7 @@
 
 
 .container-nosso-universo h1{
-    font-size: 52px;
+    font-size: 3.25rem;
     font-weight: 450;
     font-family: "neue-haas-grotesk-display";
     color: var(--color-black);
@@ -35,7 +35,7 @@
 
 @media(max-width: 800px) {
     .container-nosso-universo h1{
-        font-size: 40px;
+        font-size: 2.5rem;
     }
 }
 
@@ -43,6 +43,6 @@
 
 @media(max-width: 480px) {
     .container-nosso-universo h1{
-        font-size: 30px;
+        font-size: 7vw;
     }
 }
