--- a/src/pages/Home/componentesHome/NossoUniverso/nossouniverso.css
+++ b/src/pages/Home/componentesHome/NossoUniverso/nossouniverso.css
@@ -13,7 +13,7 @@
 
 
 .container-nosso-universo h1{
-    font-size: 3.25rem;
+    font-size: 52px;
     font-weight: 450;
     font-family: "neue-haas-grotesk-display";
     color: var(--color-black);
