mudando local texto nossos cases

--- a/src/pages/Home/componentesHome/ScrollCases/scrollcases.css
+++ b/src/pages/Home/componentesHome/ScrollCases/scrollcases.css
@@ -63,7 +63,7 @@
     color: var(--color-gray-700);
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: start;
 }
 .project p{
     font-size: 12px;
