--- a/src/pages/Home/componentesHome/BottomHome/bottomhome.css
+++ b/src/pages/Home/componentesHome/BottomHome/bottomhome.css
@@ -149,9 +149,15 @@
     .left_bottom{
         width: 100%;
     }
+    .left_bottom span, .hero_bottom span{
+        font-size: 16px;
+    }
     .adress{
         padding-bottom: 70px;
         padding-top: 2rem;
+    }
+    .adress p{
+        font-size: 24px;
     }
     .reve-mobile{
         margin-top: 57px;
