--- a/src/componentes/NavBar/navbar.css
+++ b/src/componentes/NavBar/navbar.css
@@ -278,6 +278,9 @@
     .links-menu .link-menu{
         margin-left: 1.25rem;
     }
+    .links-container{
+        border: 2px red solid;
+    }
 }
 @media(max-width: 1366px){
     .link-menu h1 {
