arrumando espacamento das letras, e aumentando scroll para not

--- a/src/pages/Home/componentesHome/ScrollCases/scrollcases.css
+++ b/src/pages/Home/componentesHome/ScrollCases/scrollcases.css
@@ -64,6 +64,7 @@
     display: flex;
     justify-content: space-between;
     align-items: start;
+    margin-top: 1rem;
 }
 .project p{
     font-size: 12px;
