arrumando horario do menu

--- a/src/componentes/NavBar/navbar.css
+++ b/src/componentes/NavBar/navbar.css
@@ -175,7 +175,7 @@
 
 }
 
-.footer-menu {
+/* .footer-menu {
     width: 100%;
     height: 100px;
     align-items: end;
@@ -187,79 +187,87 @@
     transform: translateX(-50%); 
     padding: 0px 30px;
 
-}
+} */
 
-.footer-menu .social-mn {
+/* Seção do meio da home */
+.footer-menu{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    z-index: 1;
+    height: 6.25rem;
+    align-items: start;
+    left: 50%;
+    transform: translateX(-50%); 
+    padding: 0px 30px;
+    bottom: 2rem;
+}
+.footer-menu .left-part-menu{
     width: 100%;
     max-width: 7.375rem;
-    color: var(--color-gray-500);
+    height: 6.25rem;
+    color: var( --color-gray-500);
 }
-
-.social-mn .top_part p {
-    margin-bottom: 28px;
-    font-weight: 500;
+.top-part-menu{
+    margin-bottom: 1.75rem;
 }
-
-.social-mn .bottom_part {
+.top-part-menu p{
+    color: var(--color-white);
+    opacity: 0.5;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 100%;
+}
+.bottom-part-menu{
     display: flex;
     flex-direction: column;
-    align-items: start;
-
+    gap: 12px;
 }
 
-
-.social-mn .bottom_part p {
-    color: var(--color-gray-900);
+.bottom-part-menu a{
+    color: var(--color-white);
     font-size: 16px;
     line-height: 100%;
     font-weight: 500;
-    margin-bottom: 0px;
 }
-
-.social-mn .bottom_part p:first-child {
-    margin-bottom: 10px;
-
-}
-
-.footer-menu .right_part {
+.footer-menu .right-part-menu{
     width: 100%;
     max-width: 193px;
+    height: 6.25rem;
     color: var(--color-gray-500);
     display: flex;
     flex-direction: column;
     align-items: end;
 }
 
-.footer-menu h3 {
-    font-family: "neue-haas-grotesk-display";
-    color: var(--color-gray-900);
-    font-size: 12px;
-    font-weight: 500;
-    line-height: 100%;
 
-
-}
-
-
-.footer-menu .right_part a {
+.footer-menu .right-part-menu a{
     color: var(--color-gray-900);
     margin-left: 5px;
 }
-
-.right_part .time_text {
-    margin-bottom: 28px;
-    font-weight: 500;
-
+.right-part-menu .time-text-menu {
+    margin-bottom: 1.75rem;
 }
 
-.right_part .time {
+.right-part-menu .time-text-menu p{
+    color: var(--color-white);
+    font-size: 16px;
+    line-height: 100%;
+    font-weight: 400;
+    font-family: "neue-haas-grotesk-display";
+    opacity: 0.5;
+}
+.right-part-menu .time-menu{
     display: flex;
     flex-direction: column;
     align-items: end;
+    gap: 12px;
 }
-
-.right_part .time p {
+.right-part-menu .time-menu p{
     font-weight: 450;
+    line-height: 100%;
+    color: var(--color-gray-500);
 
 }
 
@@ -346,14 +354,14 @@
 @media(max-width: 768px) {}
 
 @media(max-width: 600px) {
-    .social-mn .top_part p{
+    .social-mn .top-part-menu p{
         margin-bottom: 15px;
     }
-    .social-mn .top_part p,.social-mn .bottom_part p, .footer-menu .right_part{
+    .social-mn .top-part-menu p,.social-mn .bottom-part-menu p, .footer-menu .right-part-menu{
         font-size: 14px;
     }
 
-    .right_part .time_text{
+    .right-part-menu .time_text{
         margin-bottom: 10px;
     }
 
@@ -396,10 +404,10 @@
     .navbar-menu{
         padding: 0px 15px;
     }
-    .footer-menu .right_part .time_text p{
+    .footer-menu .right-part-menu .time_text p{
         font-size: 14px;
     }
-    .footer-menu .right_part .time p{
+    .footer-menu .right-part-menu .time-menu p{
         font-size: 14px;
     }
     .footer-menu{
