--- a/src/pages/Cases/cases.css
+++ b/src/pages/Cases/cases.css
@@ -263,22 +263,24 @@
 
 .filtro-mobile {
     display: none;
-    position: absolute;
-    top: 3.75rem;
-    right: 0.9375rem;
-    width: 2.5rem;
-    height: 2.5rem;
+    position: fixed;
+    width: 3.75rem;
+    height: 3.75rem;
     align-items: center;
     justify-content: center;
     background-color: var(--color-gray-50);
-    border-radius: 1.25rem;
+    border-radius: 2.5rem;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
 }
 
 
 .filtro-mobile img {
     max-width: 100%;
-    width: 1.875rem;
-    height: 1.875rem;
+    width: 1.75rem;
+    height: 1.4375rem;
 }
 
 .menu-mobile {
