--- a/src/pages/Cases/cases.css
+++ b/src/pages/Cases/cases.css
@@ -24,23 +24,22 @@
 }
 
 .filtros {
-    margin-top: 1.75rem;
+    margin-top: 24px;
 }
 
 .filtros li {
-    margin-bottom: 1.125rem;
-    color: var(--color-gray-500);
-    font-size: 1rem;
-    font-weight: 500;
+    margin-bottom: 28px;
+    color: var(--color-black);
+    font-size: 16px;
+    font-weight: 450;
     line-height: 110%;
     font-family: "neue-haas-grotesk-display";
     max-width: max-content;
-    transition: color 0.5s ease, border 0.5s ease;
-    border-bottom: 1px white solid;
+    transition: border 0.5s ease;
+    border-bottom: 1px transparent solid;
 }
 
 .filtros li:hover {
-    color: var(--color-black);
     border-color: var(--color-black);
     cursor: pointer;
 
@@ -273,7 +272,7 @@
     top: 90%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 2;
+    z-index: 5;
 }
 
 
@@ -285,35 +284,41 @@
 
 .menu-mobile {
     display: none;
-    width: 40vw;
-    height: 100vh;
-    background-color: var(--color-white);
-    position: absolute;
-    left: 0;
+    flex-direction: column;
+    align-items: start;
+    width: 230px;
+    height: 290px;
+    background-color: var(--color-gray-900);
+    position: fixed;
     z-index: 5;
     padding: 0px 15px;
+    border-radius: 16px;
+    top: 63%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding-left: 34px;
+    padding-right: 43px;
 }
 
 .head-menu {
     width: 100%;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 10px;
+    justify-content: start;
+    margin-top: 26px;
 }
 
-.head-menu img {
-    width: 100%;
-    max-width: 1.25rem;
-    height: 1.25rem;
-}
 
 .head-menu h1 {
-    font-size: 20px;
+    font-size: 12px;
+    font-weight: 450;
+    line-height: 110%;
+    font-family: "neue-haas-grotesk-display";
+    text-align: center;
 }
 
 .menu-open-mobile-black {
     display: none;
+    z-index: 1;
 }
 
 /* responsivo medias */
@@ -392,12 +397,6 @@
 
     }
 
-    .menu-mobile {
-        display: block;
-        width: 40vw;
-        position: fixed;
-    }
-
     .work-together {
         display: flex;
         flex-direction: column;
@@ -455,12 +454,6 @@
     }
 
  
-
-    .menu-mobile {
-        display: block;
-        width: 40vw;
-    }
-
     .work-together {
         display: flex;
         flex-direction: column;
@@ -483,10 +476,6 @@
 }
 
 @media(max-width: 480px) {
-    .menu-mobile {
-        width: 70vw;
-
-    }
     .change-page{
         gap: 0.625rem;
     }
