--- a/src/pages/Cases/cases.css
+++ b/src/pages/Cases/cases.css
@@ -260,19 +260,37 @@
     display: none;
 }
 
-.filtro-mobile {
+.container-menu-mobile{
     display: none;
     position: fixed;
+    width: 3%;
+    height: 90vh;
+    align-items: center;
+    justify-content: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 5;
+    gap: 40px;
+}
+.sla{
+    position: relative;
+    width: 3%;
+    height: 90vh;
+    display: none;
+    justify-content: center;
+    align-items: end;
+}
+
+.filtro-mobile {
+    display: none;
+    position: absolute;
     width: 3.75rem;
     height: 3.75rem;
     align-items: center;
     justify-content: center;
     background-color: var(--color-gray-50);
     border-radius: 2.5rem;
-    top: 90%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 5;
 }
 
 
@@ -282,22 +300,21 @@
     height: 1.4375rem;
 }
 
+
 .menu-mobile {
     display: none;
     flex-direction: column;
     align-items: start;
-    width: 230px;
-    height: 290px;
+    width: 14.375rem;
+    height: 18.125rem;
     background-color: var(--color-gray-900);
-    position: fixed;
+    position: absolute;
     z-index: 5;
     padding: 0px 15px;
     border-radius: 16px;
-    top: 63%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     padding-left: 34px;
     padding-right: 43px;
+    margin-bottom: 60px;
 }
 
 .head-menu {
@@ -350,6 +367,12 @@
 }
 
 @media(max-width: 800px) {
+    .container-menu-mobile{
+        display: flex;
+    }
+    .sla{
+        display: flex;
+    }
 
     .quadro-text p,
     .quadro-text .projeto {
@@ -454,6 +477,13 @@
         height: 20rem;
     }
 
+    .menu-mobile {
+       
+        width: 174px;
+        height: 250px;
+     
+    }
+
 
     
 }
@@ -479,16 +509,8 @@
     .quadrado-image:nth-child(8) {
         height: 11rem;
     }
-    .menu-mobile{
-        top: 68%;
-    }
     
 
 
 }
 
-@media(max-height: 600px){
-    .filtro-mobile{
-        top: 93%;
-    }
-}
