--- a/src/pages/About/about.css
+++ b/src/pages/About/about.css
@@ -1,7 +1,8 @@
 .about-us{
     display: flex;
     justify-content: space-between;
-    padding-top: 4.375rem;
+    padding-top: 9.1875rem;
+    align-items: end;
 }
 .about-us h1{
     font-family: "neue-haas-grotesk-display";
@@ -24,14 +25,13 @@
 .about-right{
     display: flex;
     text-align: end;
-    padding-top: 19.6875rem;
 }
 
 .img-about{
     width: 100%;
-    height: 700px;
+    height: 447px;
     overflow-y: hidden;
-    padding-top: 3rem;
+    margin-top: 4.625rem;
 }
 .img-about img{
     object-position: 50% 27%;
