mudando grid e responsivando

--- a/src/pages/About/componentesAbout/ProjectsFeedBack/projectsfeedback.css
+++ b/src/pages/About/componentesAbout/ProjectsFeedBack/projectsfeedback.css
@@ -8,16 +8,16 @@
 }
 
 .project-feedback .img-project {
-    margin-left: 6.125rem;
     display: flex;
     clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+    
     
 }
 .project-feedback .img-project img{
     position: absolute;
     width: 100%;
-    max-width: 32rem;
-    height: 39.875rem;
+    max-width: 40rem;
+    height: 39rem;
     
     
 }
@@ -55,10 +55,11 @@
     justify-content: center;
     flex-direction: column;
     position: relative;
+    margin-left: 6.25rem;
 }
 .feedback .descri{
     width: 100%;
-    max-width: 514px;
+    max-width: 32.125rem;
     
 }
 
@@ -101,7 +102,7 @@
     width: 100%;
     height: 10.75rem;
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     justify-content: space-between;
     position: absolute;
     bottom: 5%;
@@ -132,7 +133,18 @@
         padding-top: 70px;
     }
     .change-slide{
-        bottom: 0;
+        bottom: 10%;
+    }
+    .change-slide .setas{
+        margin-left: 5rem;
+    }
+
+    .project-feedback .img-project img{
+        max-width: 35rem;
+        height: 34rem;
+    }
+    .feedback p {
+        font-size: 18px;
     }
 }
 
@@ -150,7 +162,8 @@
     }
     .change-slide .setas {
         margin-bottom: 30%;
-        margin-right: 10px;
+        margin-right: 10%;
+        margin-left: 0;
     }
     .change-slide .bar{
         margin-bottom: 30%;
@@ -166,6 +179,9 @@
     }
     .change-slide{
         bottom: 5%;
+    }
+    .feedback{
+        margin-left: 0;
     }
 }
 
@@ -207,18 +223,6 @@
 }
 
 @media(max-width: 480px) {
-    /* .project-feedback{
-        grid-template-columns: 1fr; 
-        gap: 0.625rem; 
-
-    }
-    .img-project{
-        height: 21.875rem;
-    }
-    .project-feedback .img-project img{
-        max-width: 100%;
-    } */
-
     .feedback{
         width: 100%;
         height: 30rem;
@@ -228,6 +232,9 @@
     }
     .project-feedback{
         margin-top: 8rem;
+    }
+    .feedback p{
+        font-size: 14px;
     }
     
 }
