--- a/src/pages/About/componentesAbout/Principios/clientes.css
+++ b/src/pages/About/componentesAbout/Principios/clientes.css
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: space-between;
     align-items: start;
+    margin-bottom: 150px;
 }
 .header-clients .title-clients h1{
     font-size: 48px;
@@ -22,3 +23,26 @@
     line-height: 130%;
     font-family: "neue-haas-grotesk-display"
 }
+.grid-clients{
+    display: grid;
+    grid-template-columns: repeat(5, 3fr);
+    grid-template-rows: repeat(3, auto);
+    gap: 50px;
+}
+.grid-clients .grid-item{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.grid-clients .grid-item img{
+    width: 100%;
+    max-width: 100px;
+    height: 100px;
+}
+/* .grid-clients .grid-item img{
+    width: 100%;
+    max-width: 100px;
+    height: 100px;
+} */
