--- a/src/pages/About/componentesAbout/Equipe/equipe.css
+++ b/src/pages/About/componentesAbout/Equipe/equipe.css
@@ -45,6 +45,18 @@
     line-height: 85%;
     
 }
+.medias{
+    width: 1px;
+    height: 1px;
+    top: 0;
+    left: 0;
+    position: absolute;
+    visibility: hidden;
+    pointer-events: none;
+}
+.media-container.on {
+    visibility: visible;
+}
 
 .media-container{
     position: absolute;
@@ -52,4 +64,37 @@
     height: 22rem;
     top: 0;
     right: 65%;
+    overflow: hidden;
+}
+.media-container div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden; 
+    transform: translate(0, -100%); 
+    
+}
+.media-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: translate(0, 90%) 
+}
+
+.mwg_effect030 .medias img { 
+    width: 1px;
+    height: 1px;
+    top: 0;
+    left: 0;
+    position: absolute;
+    visibility: hidden;
+    pointer-events: none;
 }
