--- a/src/pages/About/componentesAbout/Equipe/equipe.css
+++ b/src/pages/About/componentesAbout/Equipe/equipe.css
@@ -1,9 +1,8 @@
 .sec-equipe{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     margin-top: 100px;
     padding-top: 216px;
-    border: 1px blue solid;
     position: relative;
 }
 .equipe ul{
@@ -54,9 +53,7 @@
     visibility: hidden;
     pointer-events: none;
 }
-.media-container.on {
-    visibility: visible;
-}
+
 
 .media-container{
     position: absolute;
@@ -65,7 +62,13 @@
     top: 0;
     right: 65%;
     overflow: hidden;
+    visibility: hidden;
+    pointer-events: none;
 }
+.media-container.on {
+    visibility: visible;
+}
+
 .media-container div {
     position: absolute;
     top: 0;
