--- a/src/pages/About/componentesAbout/Destaques/destaques.css
+++ b/src/pages/About/componentesAbout/Destaques/destaques.css
@@ -2,7 +2,7 @@
     width: 100%;
     max-width: 100%;
     margin-top: 10.1875rem;
-    margin-bottom: 141px;
+    margin-bottom: 8.8125rem;
 }
 
 
@@ -81,6 +81,8 @@
     margin-bottom: 17px;
     transition: color 0.5s ease, background-color 0.5s ease;
     position: relative;
+    cursor: pointer;
+    
 
 }
 
@@ -95,6 +97,7 @@
     top: 50%;
     transform: translate(-50%, -50%);
     clip-path: polygon(0% 100%, 100% 100%, 100% 100%, 0% 100%);
+    pointer-events: none;
 
 }
 
