--- a/src/pages/About/componentesAbout/RoletaScroll/roletaScroll.css
+++ b/src/pages/About/componentesAbout/RoletaScroll/roletaScroll.css
@@ -212,6 +212,13 @@
     .middle-roulette .country p{
         margin-left: 2.5rem;
     }
+    .container-roulette{
+        margin-top: 0px;
+       
+    }
+    .roulette-tablet{
+        margin-top: 0px;
+    }
 
 }
 
@@ -250,4 +257,5 @@
     .rigth-roulette p{
         font-size: 12px;
     }
+    
 }
