--- a/src/pages/About/componentesAbout/Clientes/clientes.css
+++ b/src/pages/About/componentesAbout/Clientes/clientes.css
@@ -38,8 +38,9 @@
 }
 .grid-clients .grid-item img{
     width: 100%;
-    max-width: 100px;
-    height: 100px;
+    max-width: 105px;
+    height: 105px;
+    object-fit: contain;
 }
 /* .grid-clients .grid-item img{
     width: 100%;
