--- a/src/pages/Home/componentesHome/ScrollCases/scrollcases.css
+++ b/src/pages/Home/componentesHome/ScrollCases/scrollcases.css
@@ -28,7 +28,8 @@
     left: 50%;
     text-align: center;
     transform: translate(-50%, -50%);
-    z-index: -1;
+    z-index: 2;
+    mix-blend-mode: difference;
 }
 .progress-bar{
     position: absolute;
